--- a/wedding.css
+++ b/wedding.css
@@ -2,3 +2,17 @@
 	text-align: center;
 	padding-top: 25%;
 }
+
+html,
+body,
+.view {
+    height: 100%;
+}
+
+.view {
+    background: url(tahoe.jpg)no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
