--- a/wedding.css
+++ b/wedding.css
@@ -5,10 +5,9 @@
 
 #tahoe {
     background: url('tahoe.jpg') center center no-repeat;
-    background-size: contain;
-    height: 0;
+    background-size: cover;
+    height: 100vh;
     width: 100%;
-    padding-top: 66.77%;
     color: white;
     display: flex;
     align-items: center;
@@ -19,6 +18,7 @@
 	font-weight: 200;
 	margin: 0 auto;
 	text-align: center;
+    top: 50%;
 }
 
 #tahoe-caption h1 {
