--- a/wedding.css
+++ b/wedding.css
@@ -5,7 +5,7 @@
 
 #tahoe {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.75) 0%,rgba(255, 255, 255, 0) 30%,rgba(255, 255, 255, 0) 100%),
-    url('tahoefinal.jpg') center center no-repeat;
+    url('tahoesoft.jpg') center center no-repeat;
     background-size: cover;
     height: 100vh;
     width: 100%;
@@ -14,14 +14,10 @@
     align-items: center;
 }
 
-#tahoe-caption {
-	font-size: 1.4rem;
-	font-weight: 200;
-	margin: 0 auto;
-	text-align: center;
-    top: 50%;
-}
 
-#tahoe-caption h1 {
-	color: white;
+.intro-caption {
+    max-width: 100%;
+    height: auto;
+	margin: 0 auto;
+    text-align: center;
 }
