--- a/gallery.css
+++ b/gallery.css
@@ -1,3 +1,7 @@
+.navbar-brand img {
+    padding: 0;
+}
+
 .container {
   background: #dee2e6;
 }
@@ -10,6 +14,6 @@ img {
   padding: 5px;
 }
 
-body {
-  padding-top: 88px;
+.gallery {
+  padding-top: 77px;
 }
